--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Angelita & Rita · Wedding Planners en Segovia</title>
-  <meta name="description" content="Angelita & Rita diseña bodas únicas, emotivas y llenas de belleza en Segovia y toda España. Creamos celebraciones que cuentan vuestra historia." />
+  
+  <!-- TÍTULO Y DESCRIPCIÓN -->
+  <title>Öleo Healing · Sesiones de Reiki en Miami</title>
+  <meta name="description" content="Vuelve a tu centro con Reiki y terapias energéticas en Miami. Sesiones presenciales y online para sanar, equilibrar y reconectar con tu luz interior." />
+
+  <!-- FAVICON -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-  <!-- Opcionales PRO para redes sociales -->
-  <meta property="og:title" content="Angelita & Rita · Wedding Planners en Segovia" />
-  <meta property="og:description" content="Bodas únicas, emotivas y llenas de belleza en Segovia y toda España. Celebraciones que cuentan vuestra historia." />
-  <meta property="og:image" content="https://angelitayrita.com/images/social-share.jpg" />
-  <meta property="og:url" content="https://angelitayrita.com/" />
+  <!-- META REDES SOCIALES -->
+  <meta property="og:title" content="Öleo Healing · Sesiones de Reiki en Miami" />
+  <meta property="og:description" content="Vuelve a tu centro con Reiki y terapias energéticas. Presencial en Miami o donde estés." />
+  <meta property="og:image" content="https://reiki.loccocommittee.com/images/social-share.jpg" />
+  <meta property="og:url" content="https://reiki.loccocommittee.com/" />
   <meta property="og:type" content="website" />
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
-    /* Animaciones y estilos generales */
     .btn404 span:last-child {
       transition: transform .25s;
     }
