--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Öleo Healing · Sesiones de Reiki en Miami" />
   <meta property="og:description" content="Vuelve a tu centro con Reiki y terapias energéticas. Presencial en Miami o donde estés." />
   <meta property="og:image" content="https://reiki.loccocommittee.com/images/social-share.jpg" />
-  <meta property="og:url" content="https://reiki.loccocommittee.com/" />
+  <meta property="og:url" content="https://oleo-healing.netlify.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Tailwind -->
