Actualización de textos (Hero y ContactForm)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- META REDES SOCIALES -->
   <meta property="og:title" content="Öleo Healing · Sesiones de Reiki en Miami" />
   <meta property="og:description" content="Vuelve a tu centro con Reiki y terapias energéticas. Presencial en Miami o donde estés." />
-  <meta property="og:image" content="https://reiki.loccocommittee.com/images/social-share.jpg" />
+  <meta property="og:image" content="https://oleo-healing.netlify.app/images/hero_prov-2.png" />
   <meta property="og:url" content="https://oleo-healing.netlify.app/" />
   <meta property="og:type" content="website" />
 
